--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p class="chess"> </p>
     <p class="chess"> </p>
     <p class="chess"> </p>
-
+<!--ESTO ES UN COMENTARIO PARA MEJORAR-->
 </body>
 
 </html>
