--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <link rel="stylesheet" href="./stylo.css" type="text/css"></<link>
 </head>
-
+<!--Unificar el proyecto y comparta clases css en un solo doc-->
 <body class="chess">
     <div class="chess"></div>
     <p class="chess"> </p>
